--- a/app/src/main/res/layout/content_onboarding_default_browser.xml
+++ b/app/src/main/res/layout/content_onboarding_default_browser.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2018 DuckDuckGo
+  ~ Copyright (c) 2019 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -24,16 +24,33 @@
     tools:background="@color/white"
     tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
 
+    <Button
+        android:id="@+id/continueButton"
+        style="@style/OnboardingButtonSecondaryCta"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/defaultBrowserMaybeLater"
+        app:layout_constraintBottom_toTopOf="@+id/launchSettingsButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/launchSettingsButton"
+        style="@style/OnboardingButtonPrimaryCta"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/defaultBrowserLetsDoIt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/defaultBrowserImage"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="40dp"
-        android:layout_marginTop="42dp"
-        android:layout_marginBottom="42dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:importantForAccessibility="no"
-        android:src="@drawable/set_as_default_browser_illustration"
-        app:layout_constraintBottom_toTopOf="@id/browserProtectionTitle"
+        android:src="@drawable/set_as_default_browser_illustration_dialog"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,53 +62,35 @@
         android:id="@+id/browserProtectionTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="26dp"
         android:fontFamily="sans-serif"
         android:lineSpacingExtra="3sp"
         android:text="@string/onboardingDefaultBrowserTitle"
         android:textAlignment="center"
         android:textColor="@color/almostBlack"
-        android:textSize="17sp"
+        android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/browserProtectionSubtitle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/defaultBrowserImage" />
 
     <TextView
         android:id="@+id/browserProtectionSubtitle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="sans-serif"
-        android:text="@string/onboardingDefaultBrowserDescription"
+        android:lineSpacingExtra="7sp"
+        android:text="@string/defaultBrowserDescriptionNoDefault"
         android:textAlignment="center"
         android:textColor="@color/brownishGrayTwo"
         android:textSize="15sp"
         android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@id/continueButton"
         app:layout_constraintEnd_toEndOf="@id/browserProtectionTitle"
         app:layout_constraintStart_toStartOf="@id/browserProtectionTitle"
-        app:layout_constraintWidth_max="500dp"
+        app:layout_constraintTop_toBottomOf="@id/browserProtectionTitle"
+        app:layout_constraintBottom_toTopOf="@id/continueButton"
+        app:layout_constraintWidth_max="300dp"
         app:layout_constraintWidth_percent="0.8" />
-
-    <Button
-        android:id="@+id/continueButton"
-        style="@style/OnboardingButtonPrimaryCta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/onboardingContinue"
-        app:layout_constraintBottom_toTopOf="@+id/launchSettingsButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/launchSettingsButton"
-        style="@style/OnboardingButtonSecondaryCta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/onboardingDefaultBrowserGoToSettingsAction"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
