--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,6 +62,7 @@
     <color name="subtleGrayTwo">#d8d8d8</color>
     <color name="whiteSix">#e5e5e5</color>
     <color name="pinkish_grey_two">#c0c0c0</color>
+    <color name="whisper">#eeeeee</color>
 
     <color name="brickOrange">#d03a10</color>
 
