--- a/app/src/main/res/layout/sheet_dax_dialog.xml
+++ b/app/src/main/res/layout/sheet_dax_dialog.xml
@@ -79,7 +79,7 @@
                 <TextView
                     android:id="@+id/dialogText"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="26dp"
                     android:layout_marginEnd="16dp"
@@ -89,7 +89,8 @@
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@id/hiddenText" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/primaryCta"
