Extract TypeAnimationTextView into its own class

--- a/app/src/main/res/layout/content_dax_dialog.xml
+++ b/app/src/main/res/layout/content_dax_dialog.xml
@@ -76,7 +76,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
+                <com.duckduckgo.app.global.view.TypeAnimationTextView
                     android:id="@+id/dialogText"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
