Add Dax Ctas to handle different scenarios

--- a/app/src/main/res/layout/include_dax_dialog.xml
+++ b/app/src/main/res/layout/include_dax_dialog.xml
@@ -67,7 +67,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
 
-            <TextView
+            <com.duckduckgo.app.global.view.TypeAnimationTextView
                 android:id="@+id/dialogText"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
