Full clean up when WebView crashes.

--- a/app/src/main/res/layout/activity_user_survey.xml
+++ b/app/src/main/res/layout/activity_user_survey.xml
@@ -24,6 +24,7 @@
     tools:context="com.duckduckgo.app.feedback.ui.common.FeedbackActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/surveyActivityContainerViewGroup"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/survey_background">
