Refactor ctaviewmodel to use browser tab viewmodel as proxy

--- a/app/src/main/res/layout/include_dax_dialog.xml
+++ b/app/src/main/res/layout/include_dax_dialog.xml
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   -->
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/daxDialog"
+    android:id="@+id/daxCtaContainer"
     android:alpha="0"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
