--- a/app/src/main/res/layout/include_dax_dialog_cta.xml
+++ b/app/src/main/res/layout/include_dax_dialog_cta.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2019 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,13 +13,12 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/daxCtaContainer"
-    android:alpha="0"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:alpha="0">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/logo"
@@ -57,15 +55,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="26dp"
-                android:layout_marginBottom="20dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="20dp"
                 android:textColor="@color/grayishBrown"
                 android:textSize="16sp"
                 android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.duckduckgo.app.global.view.TypeAnimationTextView
                 android:id="@+id/dialogTextCta"
@@ -78,19 +76,19 @@
                 android:focusable="true"
                 android:textColor="?attr/normalTextColor"
                 android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@id/hiddenTextCta"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/hiddenTextCta" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/triangle"
-        android:elevation="6dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="6dp"
         android:src="@drawable/ic_triangle_bubble"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="@id/logo"
@@ -101,16 +99,15 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="@color/cornflowerBlue"
+        android:text="@string/onboardingLetsDoItButton"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:cornerRadius="22dp"
-        android:text="@string/onboardingLetsDoItButton"
-        android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/cardView"
         app:layout_constraintStart_toStartOf="@id/cardView"
         app:layout_constraintTop_toBottomOf="@id/cardView" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
