Amend code as per code review

--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -20,6 +20,7 @@
 
     <!-- Omnibar Animation -->
     <string name="trackersAnimationText">Scanning</string>
+    <string name="trackersAnimationDotText">%s.</string>
 
     <!-- New Onboarding Experience -->
     <string name="onboardingWelcomeTitle">"Welcome to DuckDuckGo!"</string>
