--- a/app/src/main/res/layout/include_dax_dialog_cta.xml
+++ b/app/src/main/res/layout/include_dax_dialog_cta.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="16dp"
-        android:src="@drawable/ic_dax_icon"
+        app:srcCompat="@drawable/ic_dax_icon"
         app:layout_constraintBottom_toTopOf="@id/cardView"
         app:layout_constraintStart_toStartOf="parent" />
 
