--- a/app/src/main/res/drawable/ic_triangle_bubble_white.xml
+++ b/app/src/main/res/drawable/ic_triangle_bubble_white.xml
@@ -15,7 +15,14 @@
   ~ limitations under the License.
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
-    <!-- Dax Dialog -->
-    <string name="daxDialogHideButton">HIDE</string>
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="9dp"
+    android:width="14dp"
+    android:viewportHeight="100"
+    android:viewportWidth="100">
+
+    <path
+        android:fillColor="@color/white"
+        android:pathData="M 0,100 L 50,0 100,100 z" />
+
+</vector>
