--- a/app/src/main/res/layout/include_new_browser_tab.xml
+++ b/app/src/main/res/layout/include_new_browser_tab.xml
@@ -41,6 +41,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_max="180dp" />
 
+    <include
+        layout="@layout/include_dax_dialog_cta"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/ctaContainer"
         android:layout_width="match_parent"
