--- a/app/src/main/res/menu/bookmark_activity_menu.xml
+++ b/app/src/main/res/menu/bookmark_activity_menu.xml
@@ -19,7 +19,7 @@
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_bookmark"
-        android:title="Search"
+        android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always|collapseActionView" />
 </menu>
